--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ graphiql.mapping=/app-ui
 
 #By default graphql
 graphql.servlet.mapping=/student-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=admin
+spring.datasource.password=admin
