--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ graphql.servlet.mapping=/student-service
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
